--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,9 +1,10 @@
 name: Playwright Tests
 on:
-  push:
-    branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+  schedule:
+    branches: [ main, master ]
+    -cron: '9 13 * * *'
 jobs:
   test:
     timeout-minutes: 60
@@ -12,7 +13,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        node-version: 18
+        node-version: 20
     - name: Install dependencies
       run: npm ci
     - name: Install Playwright Browsers
