--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,6 +18,8 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+    - name: Start web application
+      run: node index.js
     - name: Run Playwright tests
       run: npx playwright test
     - uses: actions/upload-artifact@v3
