--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,10 +1,8 @@
 name: Playwright Tests
 on:
-  pull_request:
-    branches: [ main, master ]
+  workflow_dispatch:
   schedule:
     - cron: '6 9 * * *'
-  push:
 jobs:
   test:
     timeout-minutes: 60
